2006-04-23  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-mag, gnome-vfs, and libwnck
	have all been branched for gnome-2-14.

2006-04-19  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-keyring has been
	branched for gnome-2-14.

2006-04-16  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-doc-utils has been
	branched for gnome-2-14.

2006-04-16  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: comment out at-spi. It does not
	generate translations anymore, plus the dependency of
	gettext has been removed.

2006-04-14  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-control-center,
	gnome-applets, and sound-juicer have all been branched for
	gnome-2-14.

2006-04-10  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-screensaver and
	nautilus-cd-burner have been branched for gnome-2-14.

2006-04-08  Funda Wang <menthos@menthos.com>

	* translation-status.xml: evolution* should be 2.6 series in
        gnome-2.16.

2006-04-07  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Tried to add a gnome-2.16 release
	section.

2006-04-06  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-nettool and gnopernicus have
	been branched for gnome-2-14.

2006-03-31  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: Added <download/> tags to gimp stuff.
	gnome-themes, pessulus, vte branched.

2006-03-28  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: gnome-desktop branched.

2006-03-24  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: gedit, glib branched.

2006-03-20  Gabor Kelemen  <kelemeng@gnome.hu>

	* translation-status.xml: Corrected potname for gnome-spell and epiphany-extensions

2006-03-18  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: gnome-terminal branched.

2006-03-18  Danilo Šegan  <danilo@gnome.org>
