@@ -252,6 +252,17 @@
       </component>
     </version>
   </module>
+  <module name="chronojump">
+    <version release="HEAD">
+      <component name="chronojump" dir="chronojump" group="extras">
+        <podir dir="po"/>
+        <potname name="untitled.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
+      </component>
+    </version>
+  </module>
   <module name="conglomerate">
     <version release="HEAD">
       <component name="conglomerate" dir="conglomerate" group="extras">
