@@ -1,3 +1,7 @@
+2006-04-26  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added chronojump.
+
 2006-04-23  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: gnome-mag, gnome-vfs, and libwnck
